@@ -49,6 +49,9 @@ Core and Builtins
 
 - Issue #10516: New copy() and clear() methods for lists and bytearrays.
 
+- Issue #11386: bytearray.pop() now throws IndexError when the bytearray is
+  empty, instead of OverflowError.
+
 Library
 -------
 
